welcome.lessons.welcome.array.array667.Array667.scala.error
array667:4: error: type mismatch;
 found   : Boolean(true)
 required: Int
  		return true
                       ^