welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
	for (i <- 0 to nums.length - 1 - 2)
  	if (nums(i + 0) == 1 && nums(i + 1) == 2 && nums(i + 2) == 3)
  		return true
  
  return 0
}